tests/invalid/function_value_assignment_type_mismatch/main.py
def add(a: int, b: int) -> int:
    return a + b


def run_case() -> None:
    x: int = add


if __name__ == "__main__":
    run_case()
